[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-wwtp"
version = "0.3.0"
description = "Dynamic hospital wastewater treatment simulator plus analytical Buckley-Leverett polymer flooding toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenAI"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.scripts]
hospital-wwtp = "hospital_wwtp.cli:main"
polymer-bl = "polymer_bl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
